cmake_minimum_required(VERSION 3.20)
project(astronomy LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(ASTRO_ENABLE_WARNINGS "Enable common compiler warnings" ON)
option(ASTRO_ENABLE_WERROR "Treat warnings as errors" OFF)
option(ASTRO_ENABLE_OPENMP "Enable OpenMP parallelism" OFF)
option(ASTRO_WITH_CFITSIO "Enable CFITSIO support if available" OFF)
option(ASTRO_WITH_SOFA "Enable SOFA support if available" OFF)

add_library(astro_core INTERFACE)
target_include_directories(astro_core INTERFACE ${PROJECT_SOURCE_DIR}/include)

function(astro_apply_common_settings target_name)
    target_link_libraries(${target_name} PRIVATE astro_core)

    if(ASTRO_ENABLE_WARNINGS)
        if(MSVC)
            target_compile_options(${target_name} PRIVATE /W4)
        else()
            target_compile_options(${target_name} PRIVATE -Wall -Wextra -Wpedantic)
        endif()
    endif()

    if(ASTRO_ENABLE_WERROR)
        if(MSVC)
            target_compile_options(${target_name} PRIVATE /WX)
        else()
            target_compile_options(${target_name} PRIVATE -Werror)
        endif()
    endif()

    if(ASTRO_ENABLE_OPENMP)
        find_package(OpenMP)
        if(OpenMP_CXX_FOUND)
            target_link_libraries(${target_name} PRIVATE OpenMP::OpenMP_CXX)
        endif()
    endif()

    if(ASTRO_WITH_CFITSIO)
        find_package(PkgConfig)
        if(PkgConfig_FOUND)
            pkg_check_modules(CFITSIO cfitsio)
            if(CFITSIO_FOUND)
                target_include_directories(${target_name} PRIVATE ${CFITSIO_INCLUDE_DIRS})
                target_link_libraries(${target_name} PRIVATE ${CFITSIO_LIBRARIES})
                target_compile_definitions(${target_name} PRIVATE ASTRO_HAVE_CFITSIO=1)
            endif()
        endif()
    endif()

    if(ASTRO_WITH_SOFA)
        find_package(PkgConfig)
        if(PkgConfig_FOUND)
            pkg_check_modules(SOFA sofa_c)
            if(SOFA_FOUND)
                target_include_directories(${target_name} PRIVATE ${SOFA_INCLUDE_DIRS})
                target_link_libraries(${target_name} PRIVATE ${SOFA_LIBRARIES})
                target_compile_definitions(${target_name} PRIVATE ASTRO_HAVE_SOFA=1)
            endif()
        endif()
    endif()
endfunction()

add_executable(astronomy src/main.cpp)
astro_apply_common_settings(astronomy)

add_executable(product src/product.cpp)
astro_apply_common_settings(product)

add_executable(polar src/polar.cpp)
astro_apply_common_settings(polar)

add_executable(quadrant src/quadrant.cpp)
astro_apply_common_settings(quadrant)
